--- a/styles/BackStore.css
+++ b/styles/BackStore.css
@@ -46,6 +46,15 @@ button.btn.btn-primary {
   text-align: center;
 }
 
+/* save button */
+a.btn.btn-info {
+  width: 8%;
+  position: absolute;
+  right: 5%;
+  font-family: "Comic Sans MS";
+  word-wrap: break-word;
+}
+
 /* new button */
 li.list-group-item.New {
   width: 40%;
